@@ -22,7 +22,6 @@
 #endif
 
 #define QUARTZ 1
-#define CARBON_EVENTS 1
 
 #define MAC_OS_X_VERSION_MIN_REQUIRED   1020
 #define MAC_OS_X_VERSION_MAX_ALLOWED	1030
