@@ -1,3 +1,11 @@
+2004-04-17 arne
+
+	* CDrawContext::setClipRect uses the offset now
+	* COptionMenu::getSubMenu added
+	* mac: fixed some quartz drawing stuff
+	* mac: fix for CFrame::getPosition with quartz
+	* mac: removed CARBON_EVENTS macro as it only works with QUARTZ
+	
 2004-04-11 arne
 	
 	* CViewContainer should be completely nestable now
